build(zod): add zod-to-json-schema to dependencies
