# src/routes/boleto.routes.ts
@@ -33,40 +33,7 @@ const generateRoute = createRoute({
     body: {
       content: {
         'application/json': {
-          schema: {
-            type: 'object',
-            properties: {
-              banco: { type: 'string', enum: ['bradesco', 'caixa', 'itau', 'santander'] },
-              dataEmissao: { type: 'string', format: 'date' },
-              dataVencimento: { type: 'string', format: 'date' },
-              valorDocumento: { type: 'integer' },
-              nossoNumero: { type: 'string' },
-              agencia: { type: 'string' },
-              codigoCedente: { type: 'string' },
-              carteira: { type: 'string' },
-              localPagamento: { type: 'string' },
-              numeroDocumento: { type: 'string' },
-              cedente: { type: 'string' },
-              cedenteCnpj: { type: 'string' },
-              instrucoesPagamento: { type: 'string' },
-              identificadorEmissao: { type: 'string' },
-            },
-            example: {
-              banco: 'itau',
-              dataEmissao: '2024-01-01',
-              dataVencimento: '2024-02-01',
-              valorDocumento: 10000,
-              nossoNumero: '123456789',
-              agencia: '1234',
-              codigoCedente: '12345',
-              carteira: '175',
-              localPagamento: 'Pagável em qualquer banco até o vencimento',
-              numeroDocumento: '123456',
-              cedente: 'Empresa Exemplo LTDA',
-              cedenteCnpj: '12345678000190',
-              instrucoesPagamento: 'Não receber após o vencimento',
-            },
-          },
+          schema: gerarBoletoSchema,
         },
       },
     },
@@ -75,42 +42,7 @@ const generateRoute = createRoute({
     200: {
       content: {
         'application/json': {
-          schema: {
-            type: 'object',
-            properties: {
-              codigoBarras: { type: 'string' },
-              linhaDigitavel: { type: 'string' },
-              banco: { type: 'string' },
-              codigoBanco: { type: 'string' },
-              dataEmissao: { type: 'string', format: 'date' },
-              dataVencimento: { type: 'string', format: 'date' },
-              valorDocumento: { type: 'number' },
-            },
-            required: [
-              'codigoBarras',
-              'linhaDigitavel',
-              'banco',
-              'codigoBanco',
-              'dataEmissao',
-              'dataVencimento',
-              'valorDocumento',
-            ],
-            example: {
-              banco: 'itau',
-              dataEmissao: '2024-01-01',
-              dataVencimento: '2024-02-01',
-              valorDocumento: 10000,
-              nossoNumero: '123456789',
-              agencia: '1234',
-              codigoCedente: '12345',
-              carteira: '175',
-              localPagamento: 'Pagável em qualquer banco até o vencimento',
-              numeroDocumento: '123456',
-              cedente: 'Empresa Exemplo LTDA',
-              cedenteCnpj: '12345678000190',
-              instrucoesPagamento: 'Não receber após o vencimento'
-            },
-          },
+          schema: boletoResponseSchema,
         },
       },
       description: 'Boleto gerado com sucesso',
